force-app/main/default/objects/Cloudrop__MassMailer_Custom_Setting__c/Cloudrop__MassMailer_Custom_Setting__c.object-meta.xml
<CustomObject>
    <label>MassMailer Custom Setting</label>
    <nameField>
        <displayFormat>CS-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MassMailer Custom Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>