force-app/main/default/objects/Cloudrop__MassMailer_Custom_Setting__c/fields/Cloudrop__Custom_Landing_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Custom_Landing_Page_URL__c</fullName>
    <label>Custom Landing Page URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>