force-app/main/default/objects/Cloudrop__MassMailer_Custom_Setting__c/fields/Cloudrop__Custom_Setting_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Custom_Setting_Name__c</fullName>
    <label>Custom Setting Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>