force-app/main/default/objects/Cloudrop__MassMailer_Custom_Setting__c/fields/Cloudrop__Default_Selected_Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Default_Selected_Campaign_Status__c</fullName>
    <description>This field contains the Default Selected Campaign Status</description>
    <label>Default Selected Campaign Status</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>