force-app/main/default/objects/Cloudrop__MassMailer_Custom_Setting__c/fields/Cloudrop__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>