force-app/main/default/objects/Cloudrop__MassMailer_Custom_Setting__c/fields/Cloudrop__Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Filter_Logic__c</fullName>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>