force-app/main/default/objects/Cloudrop__MassMailer_Custom_Setting__c/fields/Cloudrop__Group_Unsubscribe_Footer_Html_Body__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Group_Unsubscribe_Footer_Html_Body__c</fullName>
    <label>Group Unsubscribe Footer HTML Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>