force-app/main/default/objects/Cloudrop__MassMailer_Custom_Setting__c/fields/Cloudrop__Is_Disable__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Is_Disable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Disable</label>
    <type>Checkbox</type>
</CustomField>