force-app/main/default/objects/Cloudrop__MassMailer_Custom_Setting__c/fields/Cloudrop__query__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__query__c</fullName>
    <label>Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>