force-app/main/default/objects/Cloudrop__MassMailer_Custom_Setting__c/fields/Cloudrop__UI_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__UI_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UI Hidden</label>
    <type>Checkbox</type>
</CustomField>