force-app/main/default/objects/Cloudrop__MassMailer_Custom_Setting__c/fields/Cloudrop__UI_Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__UI_Section_Name__c</fullName>
    <label>UI Section Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>