force-app/main/default/objects/Cloudrop__MassMailer_Custom_Setting__c/fields/Cloudrop__Unsubscribe_Content_Text_Body__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Unsubscribe_Content_Text_Body__c</fullName>
    <label>Unsubscribe Content - Text Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>