force-app/main/default/objects/Cloudrop__MassMailer_Custom_Setting__c/listViews/Cloudrop__All.listView-meta.xml
<ListView>
    <fullName>Cloudrop__All</fullName>
    <columns>NAME</columns>
    <columns>Cloudrop__Custom_Setting_Name__c</columns>
    <columns>Cloudrop__Type__c</columns>
    <columns>Cloudrop__User__c</columns>
    <columns>Cloudrop__Filter_Wrapper__c</columns>
    <columns>Cloudrop__IsActive__c</columns>
    <columns>Cloudrop__Object_Name__c</columns>
    <columns>Cloudrop__Profile_Name__c</columns>
    <columns>Cloudrop__query__c</columns>
    <columns>Cloudrop__Filter_Logic__c</columns>
    <columns>Cloudrop__Filter_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>